Modif page compte

--- a/tuto/templates/base.html
+++ b/tuto/templates/base.html
@@ -41,7 +41,7 @@
                             {% if current_user.is_authenticated %}
                                 <li><a>{{current_user.username}}</a></li>
                                 <li><a href="{{ url_for('logout') }}">
-                                    <span class="glyphicon glyphicon-log-out" title="Logout">Logout</span>
+                                    <span class="glyphicon glyphicon-log-out" title="Logout">{{current_user.username}}</span>
                                 </a></li>
                             {% endif %}
                         </ul>
