--- a/tuto/templates/compte.html
+++ b/tuto/templates/compte.html
@@ -4,3 +4,6 @@
 <link rel = "stylesheet" href="{{ url_for('static', filename = 'home.css')}}">
 {% endblock %}
 {% block content %}
+<h1>Bienvenue sur votre compte , {{user.username}}</h1>
+
+{% endblock %}
