--- a/tuto/templates/auteur.html
+++ b/tuto/templates/auteur.html
@@ -8,11 +8,29 @@
 {% if current_user.is_authenticated %}
     <a href="{{ url_for('edit_autor',id=author.id) }}">Edit</a>
 {% endif %}
-<div class="sample">
-    <ul>
-        {% for auteur in auteurs %}
-        <p><a href="{{ url_for('info_auteur', id = auteur.id) }}">{{auteur.name}}</a></p>
-        {% endfor %}
-    </ul>
-</div> 
+<div class="row g-4">
+    <div class="col-sm-12 col-xl-6">
+        <div class="bg-light rounded h-100 p-4">
+            <h6 class="mb-4">Basic Table</h6>
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">Nom</th>
+                        <th scope="col">Enregistrer</th>
+                        
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for auteur in auteurs %}
+                    <tr>
+                        <th scope="row">{{auteur.id}}</th>
+                        <td><a href="{{ url_for('info_auteur', id = auteur.id) }}">{{auteur.name}}</a></td>
+                        <td><input type="checkbox" name="" id=""></td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
+    </div>
 {% endblock %}
