--- a/tuto/templates/base.html
+++ b/tuto/templates/base.html
@@ -39,9 +39,10 @@
                         </form>
                         <ul class="nav navbar-nav navbar-right">
                             {% if current_user.is_authenticated %}
-                                <li><a>{{current_user.username}}</a></li>
+                                <li><p>{{current_user.username}}</p></li>
+                                
                                 <li><a href="{{ url_for('logout') }}">
-                                    <span class="glyphicon glyphicon-log-out" title="Logout">Logout</span>
+                                    <span class="glyphicon glyphicon-log-out" title="Logout">Deconnexion</span>
                                 </a></li>
                             {% endif %}
                         </ul>
