--- a/tuto/templates/login.html
+++ b/tuto/templates/login.html
@@ -4,25 +4,48 @@
 <link rel = "stylesheet" href="{{ url_for('static', filename = 'home.css')}}">
 {% endblock %}
 {% block content %}
-<form class ="form-horizontal" role="form" method="POST"
-      action="{{ url_for('login') }}">
-    {{ form.hidden_tag() }}
-    <div class="form-group">
-        <label for="username" class ="col-sm-2 controle-label">{{ form.username.label }}</label>
-        <div class="col-sm-10">
-            {{ form.username(size=50,class ="form-control",placeholder="Username") }}
+
+
+    <div class="container-fluid">
+        <div class="row h-100 align-items-center justify-content-center" style="min-height: 100vh;">
+            <div class="col-12 col-sm-8 col-md-6 col-lg-5 col-xl-4">
+                <div class="bg-light rounded p-4 p-sm-5 my-4 mx-3">
+                    <div class="d-flex align-items-center justify-content-between mb-3">
+                        <a href="index.html" class="">
+                            <h3 class="text-primary"><i class="fa fa-hashtag me-2"></i>EMGARO</h3>
+                        </a>
+                        <h3>Sign In</h3>
+                    </div>
+                    <form class ="form-horizontal" role="form" method="POST" action="{{ url_for('login') }}">
+                        {{ form.hidden_tag() }}
+                    <div class="form-group">
+                        <div class="form-floating mb-3">
+                            {{ form.username(size=50,class ="form-control",placeholder="Username") }}
+                            <label for="floatingInput">{{ form.username.label }}</label>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="form-floating mb-4">
+                            {{ form.password(size=50,class ="form-control",placeholder="Password") }}
+                            <label for="floatingPassword">{{ form.password.label }}</label>
+                        </div>
+                    </div>
+                    <div class="d-flex align-items-center justify-content-between mb-4">
+                            <div class="form-check">
+                                <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                                <label class="form-check-label" for="exampleCheck1">Check me out</label>
+                            </div>
+                       
+                        <a href="">Forgot Password</a>
+                    </div>
+                    <div class="form-group">
+                        <button type="submit" class="btn btn-primary py-3 w-100 mb-4">Sign In</button>
+                    </div>
+                    <p class="text-center mb-0">Don't have an Account? <a href="">Sign Up</a></p>
+                </form>
+                </div>
+            </div>
         </div>
     </div>
-    <div class="form-group">
-        <label for="password" class ="col-sm-2 controle-label">{{ form.password.label }}</label>
-        <div class="col-sm-10">
-            {{ form.password(size=50,class ="form-control",placeholder="Password") }}
-        </div>
-    </div>
-    <div class="form-group">
-        <div class="col-sm-offset-2 col-sm-10">
-            <button type="submit" class="btn btn-default">Sign in</button>
-        </div>
-    </div>
-</form>
+
 {% endblock %}
