--- a/tuto/templates/livre_auteur.html
+++ b/tuto/templates/livre_auteur.html
@@ -12,7 +12,8 @@
         </a>
         <p>{{ x.title }}</p>
         <p>{{ x.author }}</p>
-        <button <a href= "{{url_for('livre_auteur', id=auteur.id)}}">Ajouter au favoris</button>
-        {% endfor %}    <button><a href= "{{url_for('livre_auteur', id=auteur.id)}}">Livre de l'auteur</a></button>
+        <p>{{ x.price }} €</p>
+        <button><a href= "{{url_for('livre_auteur', id=auteur.id)}}">Ajouter au favoris</a></button>
+        {% endfor %} 
 </div> 
 {% endblock %}
