ajout/suppresion des fav fonctionnels

--- a/tuto/templates/compte.html
+++ b/tuto/templates/compte.html
@@ -12,9 +12,7 @@
             <img src="{{ url_for('static', filename='images/'+x.img) }}" alt="{{x.title}}" title="{{x.title}}">
         </a>
         <p>{{ x.title }}</p>
-        <p>{{ x.author }}</p>
-        <p>{{ x.price }} €</p>
-        <button><a href= "{{url_for('delete_favorite', book_id=x.id)}}">Supprimer des favoris</a></button>
+        <button><a href= "{{url_for('remove_favorite', book_id=x.id)}}">Supprimer des favoris</a></button>
         {% endfor %}
 
 {% endblock %}
