--- a/tuto/templates/login.html
+++ b/tuto/templates/login.html
@@ -12,36 +12,28 @@
                 <div class="bg-light rounded p-4 p-sm-5 my-4 mx-3">
                     <div class="d-flex align-items-center justify-content-between mb-3">
                         <a href="index.html" class="">
-                            <h3 class="text-primary"><i class="fa fa-hashtag me-2"></i>EMGARO</h3>
+                            <h3 class="text-primary"><i class="fa fa-hashtag me-2"></i>My Book</h3>
                         </a>
-                        <h3>Sign In</h3>
+                        <h3>Connexion</h3>
                     </div>
                     <form class ="form-horizontal" role="form" method="POST" action="{{ url_for('login') }}">
                         {{ form.hidden_tag() }}
                     <div class="form-group">
                         <div class="form-floating mb-3">
-                            {{ form.username(size=50,class ="form-control",placeholder="Username") }}
+                            {{ form.username(size=50,class ="form-control",placeholder="Identifiant") }}
                             <label for="floatingInput">{{ form.username.label }}</label>
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="form-floating mb-4">
-                            {{ form.password(size=50,class ="form-control",placeholder="Password") }}
+                            {{ form.password(size=50,class ="form-control",placeholder="Mot de passe") }}
                             <label for="floatingPassword">{{ form.password.label }}</label>
                         </div>
-                    </div>
-                    <div class="d-flex align-items-center justify-content-between mb-4">
-                            <div class="form-check">
-                                <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                                <label class="form-check-label" for="exampleCheck1">Check me out</label>
-                            </div>
-                       
-                        <a href="">Forgot Password</a>
                     </div>
                     <div class="form-group">
                         <button type="submit" class="btn btn-primary py-3 w-100 mb-4">Sign In</button>
                     </div>
-                    <p class="text-center mb-0">Don't have an Account? <a href="">Sign Up</a></p>
+                    <p class="text-center mb-0">Avez-vous un compte ?<a href="">Créer un compte</a></p>
                 </form>
                 </div>
             </div>
