--- a/tuto/templates/detail.html
+++ b/tuto/templates/detail.html
@@ -4,16 +4,19 @@
 <link rel = "stylesheet" href="{{ url_for('static', filename = 'home.css')}}">
 {% endblock %}
 {% block content %} 
-<h1>{{title}}</h1>
-<div class="sample">
-    <h2>{{book.title}}</h2>
-    <img src="{{ url_for('static', filename='images/'+book.img) }}" alt="{{book.title}}" title="{{book.title}}">
-    <p>{{book.author}}</p>
-    <p>{{book.price}}</p>
-    {% if var == True%}
-            <button><a href= "{{url_for('remove_favorite', book_id=book.id)}}">Supprimer des favoris</a></button>
-        {% else %}
-            <button><a href= "{{url_for('add_favorite', book_id=book.id)}}">Ajouter au favoris</a></button>
-        {% endif %}
-</div> 
+<h1>{{title}}</h1> 
+<div class="book">
+    <div class="cover" style="background-image: url({{ url_for('static', filename='images/'+book.img) }});background-size: contain; background-repeat: no-repeat;"></div>
+    <div class="details">
+        <h2>{{book.title}}</h2>
+        <p>{{book.author}}</p>
+        <p>{{book.price}} €</p>
+        {% if var == True%}
+        <button><a href= "{{url_for('remove_favorite', book_id=book.id)}}">Supprimer des favoris</a></button>
+    {% else %}
+        <button><a href= "{{url_for('add_favorite', book_id=book.id)}}">Ajouter au favoris</a></button>
+    {% endif %}
+    </div>
+</div>
+
 {% endblock %}
