--- a/tuto/static/home.css
+++ b/tuto/static/home.css
@@ -20,3 +20,113 @@ footer{
 main > .container {
     padding: 60px 15px 0;
     }
+
+    .button {
+        display: inline-block;
+        padding: 2px 4px;
+        border: 1px solid #4f4f4f;
+        border-radius: 4px;
+        transition: all 0.2s ease-in;
+        position: relative;
+        overflow: hidden;
+        font-size: 19px;
+        color: white;
+        z-index: 1;
+        background-color: black;
+       }
+       
+       .button:before {
+        content: "";
+        position: absolute;
+        left: 50%;
+        transform: translateX(-50%) scaleY(1) scaleX(1.25);
+        top: 100%;
+        width: 140%;
+        height: 180%;
+        background-color: rgba(0, 0, 0, 0.05);
+        border-radius: 50%;
+        display: block;
+        transition: all 0.5s 0.1s cubic-bezier(0.55, 0, 0.1, 1);
+        z-index: -1;
+       }
+       
+       .button:after {
+        content: "";
+        position: absolute;
+        left: 55%;
+        transform: translateX(-50%) scaleY(1) scaleX(1.45);
+        top: 180%;
+        width: 160%;
+        height: 190%;
+        background-color: #425552;
+        border-radius: 50%;
+        display: block;
+        transition: all 0.5s 0.1s cubic-bezier(0.55, 0, 0.1, 1);
+        z-index: -1;
+       }
+       
+       .button:hover {
+        color: #ffffff;
+        border: 1px solid #425552;
+       }
+       
+       .button:hover:before {
+        top: -35%;
+        background-color: #425552;
+        transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
+       }
+       
+       .button:hover:after {
+        top: -45%;
+        background-color: #425552;
+        transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
+       }
+
+       .table > :not(caption) > * > * {
+        padding: 1rem;
+    }
+
+    .book {
+        width: 300px;
+        height: 450px;
+        box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
+        overflow: hidden;
+        position: relative;
+        margin: 20px auto;
+    }
+    
+    .book .cover {
+        width: 100%;
+        height: 60%;
+        background-size: cover;
+        background-position: center;
+    }
+    
+    .book .details {
+        width: 100%;
+        height: 40%;
+        padding: 20px;
+        box-sizing: border-box;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        background: white;
+        color: black;
+        transition: all 0.3s ease-in-out;
+    }
+    
+    .book:hover .details {
+        background: rgba(255, 255, 255, 0.9);
+    }
+    
+    .book .details h2 {
+        font-size: 22px;
+        margin-bottom: 10px;
+        font-weight: bold;
+    }
+    
+    .book .details p {
+        font-size: 16px;
+        margin-bottom: 10px;
+        line-height: 1.5;
+    }
