--- a/tuto/templates/compte.html
+++ b/tuto/templates/compte.html
@@ -5,14 +5,33 @@
 {% endblock %}
 {% block content %}
 <h1>Bienvenue sur votre compte , {{user.username}}</h1>
-<div class="sample">
-        <h2>Voici vos livres favoris</h2>
-        {% for x in favorites_books %}
-        <a href="{{url_for('detail', id=x.id)}}">
-            <img src="{{ url_for('static', filename='images/'+x.img) }}" alt="{{x.title}}" title="{{x.title}}">
-        </a>
-        <p>{{ x.title }}</p>
-        <button><a href= "{{url_for('remove_favorite', book_id=x.id)}}">Supprimer des favoris</a></button>
-        {% endfor %}
+<div class="row g-4">
+    <div class="col-sm-12 col-xl-6">
+        <div class="bg-light rounded h-100 p-4">
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">Nom</th>
+                        <th scope="col">Auteur</th>
+                        <th scope="col">Visuel</th>
+                        <th scope="col">favoris</th>
+                        
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for book in favorites_books %}
+                    <tr>
+                        <th scope="row">{{book.id}}</th>
+                        <td><a href="{{ url_for('info_auteur', id = book.id) }}">{{book.title}}</a></td>
+                        <td>{{book.author}}</td>
+                        <td><img src="{{ url_for('static', filename='images/'+book.img) }}" alt=""></td>
+                        <td><button><a href= "{{url_for('remove_favorite', book_id=book.id)}}">Supprimer des favoris</a></button></td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
+    </div>
 
 {% endblock %}
