--- a/tuto/templates/login.html
+++ b/tuto/templates/login.html
@@ -33,7 +33,7 @@
                     <div class="form-group">
                         <button type="submit" class="btn btn-primary py-3 w-100 mb-4">Sign In</button>
                     </div>
-                    <p class="text-center mb-0">Avez-vous un compte ?<a href="">Créer un compte</a></p>
+                    <p class="text-center mb-0">Avez-vous un compte ?<a href="/cree">Créer un compte</a></p>
                 </form>
                 </div>
             </div>
